--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -98,6 +98,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -131,6 +132,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -146,18 +148,22 @@
     <ClCompile Include="loader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="controls.cpp" />
+    <ClCompile Include="shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="file.h" />
     <ClInclude Include="info.h" />
     <ClInclude Include="loader.h" />
     <ClInclude Include="controls.h" />
+    <ClInclude Include="shader.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="fshader_vermelho.glsl" />
     <None Include="fshader_gouraud.glsl" />
     <None Include="fshader_phong.glsl" />
     <None Include="vshader_gouraud.glsl" />
     <None Include="vshader_phong.glsl" />
+    <None Include="vshader_vermelho.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="OpenGL_ICON.res" />
