--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="controls.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="info.h">
@@ -47,6 +50,9 @@
     <ClInclude Include="controls.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="vshader_gouraud.glsl">
@@ -59,6 +65,12 @@
       <Filter>Shader</Filter>
     </None>
     <None Include="fshader_phong.glsl">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="vshader_vermelho.glsl">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="fshader_vermelho.glsl">
       <Filter>Shader</Filter>
     </None>
   </ItemGroup>
